# pcb-tools

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: coverage.yml  pcb-tools.yml  python310.yaml  python311.yaml  python312.yaml  python37.yaml  python38.yaml  python39.yaml  unit-tests.yml
doc/source/: conf.py
examples/: cairo_example.py  excellon_optimize.py  pcb_example.py  render_gerbv_tests.py
gerber/: __main__.py  am_eval.py  am_read.py  am_statements.py  cam.py  common.py  excellon.py  excellon_settings.py  excellon_statements.py  excellon_tool.py  gerber_statements.py  ipc356.py  layers.py  operations.py  pcb.py  primitives.py  rs274x.py  utils.py
gerber/excellon_report/: excellon_drr.py
gerber/ncparam/: allegro.py
gerber/render/: __init__.py  cairo_backend.py  excellon_backend.py  render.py  rs274x_backend.py  theme.py
gerber/tests/: test_am_statements.py  test_cairo_backend.py  test_cam.py  test_common.py  test_excellon.py  test_excellon_statements.py  test_gerber_statements.py  test_ipc356.py  test_layers.py  test_pcb.py  test_primitives.py  test_rs274x.py  test_rs274x_backend.py  test_utils.py
